// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InOrNotIn /> render 1`] = `
<div
  style="height: 330px;"
>
  <div
    class="gio-input gio-input--middle"
  >
    <input
      class="gio-input__content"
      placeholder="请输入…"
      type="text"
      value=""
    />
  </div>
  <div
    style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="gio-loading gio-loading-large"
    >
      <div
        class="gio-loading-ring"
      >
        <div
          class="gio-loading-ring-line gio-loading-ring-line-1"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
        <div
          class="gio-loading-ring-line gio-loading-ring-line-2"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
        <div
          class="gio-loading-ring-line gio-loading-ring-line-3"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
        <div
          class="gio-loading-ring-line gio-loading-ring-line-4"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InOrNotIn /> should be can input. 1`] = `
<div
  style="height: 330px;"
>
  <div
    class="gio-input gio-input--middle"
  >
    <input
      class="gio-input__content"
      placeholder="请输入…"
      type="text"
      value="t,"
    />
  </div>
  <div
    style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="gio-loading gio-loading-large"
    >
      <div
        class="gio-loading-ring"
      >
        <div
          class="gio-loading-ring-line gio-loading-ring-line-1"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
        <div
          class="gio-loading-ring-line gio-loading-ring-line-2"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
        <div
          class="gio-loading-ring-line gio-loading-ring-line-3"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
        <div
          class="gio-loading-ring-line gio-loading-ring-line-4"
        >
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-left"
            />
          </div>
          <div
            class="gio-loading-ring-line-ticker"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-center"
            />
          </div>
          <div
            class="gio-loading-ring-line-cog"
          >
            <div
              class="gio-loading-ring-line-cog-inner gio-loading-ring-line-cog-inner-right"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
